# BubbleTrouble

./: .gitignore  BubbleTrouble.sln  CMakeLists.txt  README.md
Bubble Trouble/: Bubble Trouble.vcxproj  Bubble Trouble.vcxproj.filters  CMakeLists.txt
Bubble Trouble/artifacts/05_Week/: 00_Meeting_Agenda.txt
Bubble Trouble/artifacts/08_Week/: 00_Jack-Standup.txt  00_Sarah-Standup.txt
Bubble Trouble/artifacts/09_Week/: 00_Sarah-Standup.txt
Bubble Trouble/artifacts/10_Week/: 00_Patrick-Standup.txt  00_Sarah-Standup.txt
Bubble Trouble/resources/: credits.txt
Bubble Trouble/src/: main.cpp
Bubble Trouble/src/core/: AnimationHandler.cpp  Bubble.cpp  Bubble.hpp  Bullet.cpp  Bullet.hpp  Game.cpp  Game.hpp  GameEntity.cpp  GameEntity.hpp  Player.cpp  Player.hpp  TextureManager.cpp
Bubble Trouble/src/other/: TestClass.hpp
Bubble Trouble/src/states/: CreditGameState.cpp  CreditGameState.hpp  EndGameState.cpp  EndGameState.hpp  GameState.hpp  MenuGameState.cpp  MenuGameState.hpp  PlayGameState.cpp  PlayGameState.hpp  SplashGameState.cpp  SplashGameState.hpp
Bubble Trouble/src/unit_tests/: BubbleTest.cpp  BulletTest.cpp  Test.cpp
_artifacts/05_Week/: 01_Project_Proposal.txt
_artifacts/06_Week/: 00_Meeting_Agenda.txt
_artifacts/07_Week/: 00_Meeting_Agenda.txt
_artifacts/08_Week/: 00_Patrick-Standup.txt  00_Sarah-Standup.txt
_artifacts/09_Week/: Patrick-Standup.txt
artifacts/05_Week/: 00_MoM.txt
artifacts/06_Week/: 00_MoM.txt
artifacts/07_Week/: 00_MoM.txt
artifacts/08_Week/: 00_Jack-Standup.txt  00_Patrick-Standup.txt
artifacts/09_Week/: 00_Jack-Standup.txt  Sarah-Standup.txt
artifacts/10_Week/: 00_Jack-Standup.txt
artifacts/11_Week/: Process review.txt
resources/: credits.txt
src/: Blob.cpp  Blob.hpp  Bubble.cpp  Bubble.hpp  BubbleTrouble.sln  BubbleTrouble.vcxproj  BubbleTrouble.vcxproj.filters  Bullet.cpp  Bullet.hpp  Game.cpp  Game.hpp  Player.cpp  Player.hpp  TestClass.cpp  TestClass.hpp  main.cpp  stdafx.cpp
src/core/: AnimationHandler.hpp  Bubble.cpp  Bubble.hpp  Bullet.cpp  Bullet.hpp  Game.cpp  Game.hpp  GameEntity.cpp  GameEntity.hpp  Player.cpp  Player.hpp  TextureManager.hpp
src/states/: EndPlayGameState.cpp  EndPlayGameState.h  GameOptionsGameState.cpp  GameOptionsGameState.h  GameState.hpp  HelpGameState.cpp  HelpGameState.h  HighScoreGameState.cpp  HighScoreGameState.h  MenuGameState.cpp  MenuGameState.hpp  PlayGameState.cpp  PlayGameState.h  PlayGameState.hpp  SettingsGameState.cpp  SettingsGameState.h  SplashGameState.cpp  SplashGameState.hpp
src/unit_tests/: BulletTest.cpp  Test.cpp  (+1 more)
unit_tests/: Test.cpp
(+9 files in other folders)
